unpackaged/main/default/objects/litify_pm__COI_Search_Result__c/litify_pm__COI_Search_Result__c.object-meta.xml
<CustomObject>
    <label>COI Search Result</label>
    <nameField>
        <displayFormat>CSR-{00000000}</displayFormat>
        <label>COI Search Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COI Search Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>