unpackaged/main/default/objects/litify_pm__COI_Search_Result__c/fields/litify_pm__COI_Conflict_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__COI_Conflict_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status</label>
    <referenceTo>litify_pm__COI_Conflict_Status__c</referenceTo>
    <relationshipLabel>COI Search Results</relationshipLabel>
    <relationshipName>COI_Search_Results</relationshipName>
    <type>Lookup</type>
</CustomField>