unpackaged/main/default/objects/litify_pm__COI_Search_Result__c/fields/litify_pm__COI_Search__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__COI_Search__c</fullName>
    <label>COI Search</label>
    <referenceTo>litify_pm__COI_Search__c</referenceTo>
    <relationshipLabel>COI Search Results</relationshipLabel>
    <relationshipName>COI_Search_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>