unpackaged/main/default/objects/litify_pm__COI_Search_Result__c/fields/litify_pm__Notes__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>