unpackaged/main/default/objects/litify_pm__COI_Search_Result__c/fields/litify_pm__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>